// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`using Emblematic icon components > should add a class to the element 1`] = `
<body>
  <div>
    <svg
      class="emblematic-icon emblematic emblematic-ethereum my-icon"
      height="24"
      viewBox="0 0 32 32"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Ethereum
      </title>
      
      
      <path
        d="M16 0 6.2 16.3l9.8-4.5V0Z"
        fill="#8891B1"
      />
      
      
      <path
        d="m16 11.8-9.8 4.5 9.8 5.8V11.8Zm9.8 4.5L16 0v11.8l9.8 4.5Z"
        fill="#63688E"
      />
      
      
      <path
        d="m16 22.1 9.8-5.8-9.8-4.5v10.3Z"
        fill="#464A75"
      />
      
      
      <path
        d="M6.2 18.2 16 32v-8l-9.8-5.8Z"
        fill="#8891B1"
      />
      
      
      <path
        d="M16 24v8l9.8-13.8L16 24Z"
        fill="#63688E"
      />
      
      
      
    </svg>
  </div>
</body>
`;

exports[`using Emblematic icon components > should add a class to the element 2`] = `
<svg
  class="emblematic-icon emblematic emblematic-ethereum my-icon"
  height="24"
  viewBox="0 0 32 32"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Ethereum
  </title>
  
  
  <path
    d="M16 0 6.2 16.3l9.8-4.5V0Z"
    fill="#8891B1"
  />
  
  
  <path
    d="m16 11.8-9.8 4.5 9.8 5.8V11.8Zm9.8 4.5L16 0v11.8l9.8 4.5Z"
    fill="#63688E"
  />
  
  
  <path
    d="m16 22.1 9.8-5.8-9.8-4.5v10.3Z"
    fill="#464A75"
  />
  
  
  <path
    d="M6.2 18.2 16 32v-8l-9.8-5.8Z"
    fill="#8891B1"
  />
  
  
  <path
    d="M16 24v8l9.8-13.8L16 24Z"
    fill="#63688E"
  />
  
  
  
</svg>
`;

exports[`using Emblematic icon components > should add a style attribute to the element 1`] = `
<body>
  <div>
    <svg
      class="emblematic-icon emblematic emblematic-ethereum "
      height="24"
      style="position: absolute;"
      viewBox="0 0 32 32"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Ethereum
      </title>
      
      
      <path
        d="M16 0 6.2 16.3l9.8-4.5V0Z"
        fill="#8891B1"
      />
      
      
      <path
        d="m16 11.8-9.8 4.5 9.8 5.8V11.8Zm9.8 4.5L16 0v11.8l9.8 4.5Z"
        fill="#63688E"
      />
      
      
      <path
        d="m16 22.1 9.8-5.8-9.8-4.5v10.3Z"
        fill="#464A75"
      />
      
      
      <path
        d="M6.2 18.2 16 32v-8l-9.8-5.8Z"
        fill="#8891B1"
      />
      
      
      <path
        d="M16 24v8l9.8-13.8L16 24Z"
        fill="#63688E"
      />
      
      
      
    </svg>
  </div>
</body>
`;

exports[`using Emblematic icon components > should adjust the size 1`] = `
<body>
  <div>
    <svg
      class="emblematic-icon emblematic emblematic-ethereum "
      height="48"
      viewBox="0 0 32 32"
      width="48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Ethereum
      </title>
      
      
      <path
        d="M16 0 6.2 16.3l9.8-4.5V0Z"
        fill="#8891B1"
      />
      
      
      <path
        d="m16 11.8-9.8 4.5 9.8 5.8V11.8Zm9.8 4.5L16 0v11.8l9.8 4.5Z"
        fill="#63688E"
      />
      
      
      <path
        d="m16 22.1 9.8-5.8-9.8-4.5v10.3Z"
        fill="#464A75"
      />
      
      
      <path
        d="M6.2 18.2 16 32v-8l-9.8-5.8Z"
        fill="#8891B1"
      />
      
      
      <path
        d="M16 24v8l9.8-13.8L16 24Z"
        fill="#63688E"
      />
      
      
      
    </svg>
  </div>
</body>
`;

exports[`using Emblematic icon components > should render an component 1`] = `
<body>
  <div>
    <svg
      class="emblematic-icon emblematic emblematic-ethereum "
      height="24"
      viewBox="0 0 32 32"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Ethereum
      </title>
      
      
      <path
        d="M16 0 6.2 16.3l9.8-4.5V0Z"
        fill="#8891B1"
      />
      
      
      <path
        d="m16 11.8-9.8 4.5 9.8 5.8V11.8Zm9.8 4.5L16 0v11.8l9.8 4.5Z"
        fill="#63688E"
      />
      
      
      <path
        d="m16 22.1 9.8-5.8-9.8-4.5v10.3Z"
        fill="#464A75"
      />
      
      
      <path
        d="M6.2 18.2 16 32v-8l-9.8-5.8Z"
        fill="#8891B1"
      />
      
      
      <path
        d="M16 24v8l9.8-13.8L16 24Z"
        fill="#63688E"
      />
      
      
      
    </svg>
  </div>
</body>
`;

exports[`using Emblematic icon components > should render an icon slot 1`] = `
<body>
  <div>
    <svg
      class="emblematic-icon emblematic emblematic-algorand "
      height="24"
      viewBox="0 0 32 32"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Algorand
      </title>
      
      
      <path
        d="m8.16 28 3.49-6.01L15.13 16l3.46-6.01.57-.95.26.95 1.06 3.96L19.3 16l-3.48 5.99L12.35 28h4.16l3.48-6.01 1.8-3.11.86 3.1L24.26 28H28l-1.61-6.01L24.77 16l-.42-1.54 2.59-4.47h-3.78l-.13-.45-1.32-4.9-.17-.64h-3.63l-.08.13-3.4 5.86L10.95 16l-3.47 5.99L4 28h4.16Z"
        fill="#fff"
      />
      
      
      
      <text>
        Test
      </text>
    </svg>
  </div>
</body>
`;
